# tnk-wordcount

./: Dockerfile  pyproject.toml  wordcount.py
