[tool.poetry]
name = "tnk-wordcount"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
html2text = "^2020.1.16"
urllib3 = "^1.25.8"
sh = "^1.12.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
